# guarding

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  build.rs  guarding.guarding
.github/workflows/: release.yml
_fixtures/java/: size.guarding
_fixtures/java/src/main/java/com/phodal/pepper/: PepperApplication.java
_fixtures/java/src/main/java/com/phodal/pepper/normal/date/mockito/: DateTimeImpl.java  MyDateClass.java
_fixtures/java/src/main/java/com/phodal/pepper/normal/exception/: MyDictionary.java
_fixtures/java/src/main/java/com/phodal/pepper/normal/file/: NewFileExample.java
_fixtures/java/src/main/java/com/phodal/pepper/powermock/: ClassCallStaticMethodObj.java  FinalClass.java  MockCalenderInstance.java  MockNewClass.java  PrivateMethodDemo.java  SpyMockEmployeeService.java  StaticMethod.java  SystemClassUser.java
_fixtures/java/src/main/java/com/phodal/pepper/refactor/parser/: BaseParser.java  JsonParser.java  XmlParser.java
_fixtures/java/src/main/java/com/phodal/pepper/refactor/staticclass/: FileHandler.java  FileVerify.java  FileVerifyFactory.java  FileVerifyFactoryImpl.java  LogFileHandle.java
_fixtures/java/src/main/java/com/phodal/pepper/refactor/switchcases/: README.md  RegisterPattern.java  RegisterUsecase.java
_fixtures/java/src/main/java/com/phodal/pepper/refactor/switchcases/clz/: CaseA.java  CaseB.java  CaseInterface.java
_fixtures/javascript/: import.js
benches/: my_benchmark.rs
docs/adr/: 0001-git-hooks.md  README.md
examples/: 0.0.1.sample  demo.guard  guard.keywords
guarding_adapter/: Cargo.toml  README.md  cbindgen.toml  guarding_adapter.h
guarding_adapter/src/: lib.rs
guarding_core/: Cargo.toml  README.md
guarding_core/src/: ast.rs  guarding.pest  lib.rs  parser.rs
guarding_core/src/domain/: code_annotation.rs  code_class.rs  code_file.rs  code_module.rs  mod.rs
guarding_core/src/parser/: errors.rs  mod.rs
guarding_core/src/parser/support/: mod.rs  str_support.rs
guarding_core/src/rule_executor/: executor.rs  mod.rs  package_matcher.rs  rule_error.rs
guarding_core/src/support/: package_unify.rs
guarding_exec/: Cargo.toml
guarding_ident/: Cargo.toml  README.md
guarding_ident/src/: lib.rs  model_builder.rs
guarding_ident/src/identify/: c_sharp_ident.rs  code_ident.rs  java_ident.rs  js_ident.rs  mod.rs  rust_ident.rs
guarding_parser/: Cargo.toml  README.md
guarding_parser/src/: ast.rs  guarding.pest  parser.rs
guarding_parser/src/support/: package_unify.rs
src/: code_model.rs  lib.rs  location.rs  main.rs  package_matcher.rs  rule_executor.rs  tests.rs
src/domain/: code_annotation.rs  code_class.rs  code_file.rs  code_function.rs  code_import.rs  code_module.rs  code_package.rs
src/identify/: code_ident.rs  code_model.rs  java_ident.rs  js_ident.rs  mod.rs  rust_ident.rs
src/parser/: ast.rs  errors.rs  guarding.pest  ident.pest  mod.rs  package_unify.rs  parser.rs  validator.rs
src/parser/support/: package_unify.rs
src/rule_executor/: executor.rs  mod.rs  model_builder.rs  package_matcher.rs  rule_error.rs
