[package]
name = "guarding"
version = "0.2.0"
authors = ["Inherd Group <group@inherd.org>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/inherd/guarding"
documentation = "https://github.com/inherd/guarding"
homepage = "https://github.com/inherd/guarding"
description = """
Guarding is a guardians for code, architecture, layered. Guarding crate a architecture aguard DSL which based on ArchUnit.
"""
categories = ["text-processing", "command-line-interface", "development-tools"]
#exclude = [
#    ".github/*",
#    ".gitattributes",
#    ".adr.json",
#]

include = [
    "tree-sitter-java/*",
    "tree-sitter-javascript/*",
    "tree-sitter-rust/*",
    "src/*"
]

[lib]
path = "src/lib.rs"


[dependencies]
tree-sitter = "0.19.3"

# serialize
serde = { version = "1.0", features = ["derive"] }
serde_json     = "1"

regex = "1"

pest = "2.1.3"
pest_derive = "2.1.0"

walkdir = "2"

clap = "3.0.0-beta.2"

[build-dependencies]
cc="*"
