[package]
name = "guarding"
version = "0.2.1"
authors = ["Inherd Group <group@inherd.org>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/inherd/guarding"
documentation = "https://github.com/inherd/guarding"
homepage = "https://github.com/inherd/guarding"
description = """
Guarding is a guardians for code, architecture, layered. Guarding crate a architecture aguard DSL which based on ArchUnit.
"""
categories = ["text-processing", "command-line-interface", "development-tools"]
exclude = [
    ".github/*",
    ".gitattributes",
    ".adr.json",
    "guarding.guarding",
    "_fixtures",
    "docs",
    "examples",
]

[lib]
path = "src/lib.rs"

[dependencies]
tree-sitter = "0.19.3"
tree-sitter-java = "0.19.0"
tree-sitter-javascript = "0.19.0"
tree-sitter-rust = "0.19.0"

# serialize
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"

regex = "1"

walkdir = "2"

clap = "3.0.0-beta.2"

guarding_parser = { path = "guarding_parser", version = "0.2.1" }

[build-dependencies]
cc = "1.0"

[workspace]
members = [
    "guarding_parser"
]