[package]
name = "guarding"
version = "0.2.6"
authors = ["Inherd Group <group@inherd.org>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/inherd/guarding"
documentation = "https://github.com/inherd/guarding"
homepage = "https://github.com/inherd/guarding"
description = """
Guarding is a guardians for code, architecture, layered. Guarding crate a architecture aguard DSL which based on ArchUnit.
"""
categories = ["text-processing", "command-line-interface", "development-tools"]
exclude = [
    ".github/*",
    ".gitattributes",
    ".adr.json",
    "guarding.guarding",
    "_fixtures",
    "docs",
    "examples",
]

[lib]
path = "src/lib.rs"

[dependencies]
# serialize
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"

regex = "1"

clap = "3.0.0-beta.2"

guarding_parser = { path = "guarding_parser", version = "0.2.6" }
guarding_core = { path = "guarding_core", version = "0.2.6" }
guarding_ident = { path = "guarding_ident", version = "0.3.0" }

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }

[[bench]]
name = "my_benchmark"
harness = false

[build-dependencies]
cc = "1.0"

[workspace]
members = [
    "guarding_adapter",
    "guarding_parser",
    "guarding_core",
    "guarding_ident",
]