[package]
name = "guarding_adapter"
version = "0.1.0"
authors = ["Phodal Huang <h@phodal.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/inherd/guarding"
documentation = "https://github.com/inherd/guarding"
homepage = "https://github.com/inherd/guarding"
description = """
Guarding is a guardians for code, architecture, layered. Guarding crate a architecture aguard DSL which based on ArchUnit.
"""
categories = ["text-processing", "command-line-interface", "development-tools"]
exclude = [
    ".github/*",
    ".gitattributes",
    ".adr.json",
    "guarding.guarding",
    "_fixtures",
    "docs",
    "examples",
]

[dependencies]

guarding_parser = { path = "../guarding_parser", version = "0.2.5" }
guarding_core = { path = "../guarding_core", version = "0.2.5" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1"

[lib]
name = "guarding_adapter"
crate-type = ["lib", "cdylib"]
