[package]
name = "guarding_parser"
version = "0.2.6"
authors = ["Inherd Group <group@inherd.org>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/inherd/guarding"
documentation = "https://github.com/inherd/guarding"
homepage = "https://github.com/inherd/guarding"
description = """
Guarding is a guardians for code, architecture, layered. Guarding crate a architecture aguard DSL which based on ArchUnit.
"""
categories = ["text-processing", "command-line-interface", "development-tools"]
exclude = [
    ".github/*",
    ".gitattributes",
    ".adr.json",
    "guarding.guarding",
    "_fixtures",
    "docs",
    "examples",
]

[dependencies]
pest = "2.1.3"
pest_derive = "2.1.0"

# serialize
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"

[lib]
name = "guarding_parser"
crate-type = ["lib"]
